The Google Maps API script is now loaded directly in the template with the API key passed as a variable. The initMap() function has been modified to set the initial map location and handle marker placement. Additionally, the updateLocation() function has been added to update the form fields and perform geocoding for the selected location.

--- a/webapp/templates/webapp/create_a_post.html
+++ b/webapp/templates/webapp/create_a_post.html
@@ -6,7 +6,7 @@
 
 <div class="create-post">
     <h2>Create a new post</h2>
-    <form method="post" action="{% url 'webapp:home' %}" enctype="multipart/form-data">
+    <form method="post" action="" enctype="multipart/form-data">
         {% csrf_token %}
         {{ form.media }} 
         {{ form.as_p }}
@@ -14,68 +14,114 @@
         <input type="hidden" name="longitude" id="longitude" value="{{ form.initial.longitude }}">
         <input type="hidden" name="place_name" id="place_name" value="{{ form.initial.place_name }}">
         <input type="hidden" name="place_id" id="place_id" value="{{ form.initial.place_id }}">
-        <div id="map" style="height: 400px; width: 100%;"></div>   
+        <div id="map" style="height: 400px; width: 100%;"></div>
+        <script async defer src="https://maps.googleapis.com/maps/api/js?key={{ API_KEY }}&libraries=places&callback=initMap"></script>
+        <script>
+            var map;
+            var marker;
+            function initMap() {
+                map = new google.maps.Map(document.getElementById('map'), {
+                    center: {lat: 35, lng: 320},
+                    zoom: 2.5
+                });
+                
+                var marker = new google.maps.Marker({
+                    map: map,
+                    draggable: true
+                });
+
+                var geocoder = new google.maps.Geocoder;
+
+                const input = document.getElementById('location');
+                const latitude = document.getElementById('latitude');
+                const longitude = document.getElementById('longitude');
+                const autocomplete = new google.maps.places.Autocomplete(input);
+                autocomplete.bindTo('bounds', map);
+            
+                autocomplete.addListener('place_changed', function() {
+                    const place = autocomplete.getPlace();
+                    if (!place.geometry) {
+                        window.alert("No details available for input: '" + place.name + "'");
+                        return;
+                    }
+            
+                    if (place.geometry.viewport) {
+                        map.fitBounds(place.geometry.viewport);
+                    } else {
+                        map.setCenter(place.geometry.location);
+                        map.setZoom(16);
+                    }
+            
+                    latitude.value = place.geometry.location.lat();
+                    longitude.value = place.geometry.location.lng();
+                    document.getElementById('place_name').value = place.name;
+                    document.getElementById('place_id').value = place.place_id;
+            
+                    marker.setPosition(place.geometry.location);
+                    marker.setVisible(true);
+                    updateFormFields(place);
+                });
+                function updateLocation(event) {
+                    const newLocation = event.latLng;
+                    map.setCenter(newLocation);
+                    map.setZoom(8);
+                    marker.setPosition(newLocation);
+                    geocoder.geocode({'location': newLocation}, function(results, status) {
+                        if (status === 'OK') {
+                            if (results[0]) {
+                                if (results[0].formatted_address.indexOf(' ') >= 0) {
+                                    const place = {
+                                        geometry: {
+                                            location: newLocation
+                                        },
+                                        name: results[0].formatted_address,
+                                        place_id: ''
+                                    };
+
+                                    updateFormFields(place);
+                                    input.value = results[1].formatted_address;
+                                } else {
+                                    window.alert('No valid address found for this location');
+                                }
+                            } else {
+                                window.alert('No results found');
+                            }
+                        } else {
+                            window.alert('Geocoder failed due to: ' + status);
+                        }
+                    });
+                }
+
+
+                google.maps.event.addListener(map, 'click', updateLocation);
+                google.maps.event.addListener(marker, 'dragend', updateLocation);
+
+
+                function updateFormFields(place) {
+                    document.getElementById('latitude').value = place.geometry.location.lat();
+                    document.getElementById('longitude').value = place.geometry.location.lng();
+                    document.getElementById('place_name').value = place.name;
+                    document.getElementById('place_id').value = place.place_id;
+                }
+            }
+
+            function toggleTimeOption() {
+                var includeTimeCheckbox = document.getElementById('id_include_time');
+                var timeOptionalField = document.getElementById('id_time');
+
+                if (includeTimeCheckbox.checked) {
+                    timeOptionalField.removeAttribute('disabled');
+                } else {
+                    timeOptionalField.setAttribute('disabled', 'disabled');
+                }
+            }
+            window.onload = function() {
+                toggleTimeOption();
+                document.getElementById('id_include_time').addEventListener('change', toggleTimeOption);
+            }
+        </script>
         <button type="submit">Publish Your Post</button>
     </form>
 </div>
 
-{% endblock %}
-
-{% block extra_js %}
-<script>
-
-var map;
-function initMap() {
-    map = new google.maps.Map(document.getElementById('map'), {
-        center: {lat: -34.397, lng: 150.644},
-        zoom: 8
-    });
-
-    const input = document.getElementById('location');
-    const latitude = document.getElementById('latitude');
-    const longitude = document.getElementById('longitude');
-    const autocomplete = new google.maps.places.Autocomplete(input);
-
-    autocomplete.addListener('place_changed', function() {
-        const place = autocomplete.getPlace();
-        if (!place.geometry) {
-            window.alert("No details available for input: '" + place.name + "'");
-            return;
-        }
-
-        if (place.geometry.viewport) {
-            map.fitBounds(place.geometry.viewport);
-        } else {
-            map.setCenter(place.geometry.location);
-            map.setZoom(16);
-        }
-
-        latitude.value = place.geometry.location.lat();
-        longitude.value = place.geometry.location.lng();
-        document.getElementById('place_name').value = place.name;
-        document.getElementById('place_id').value = place.place_id;
-
-        marker.setPosition(place.geometry.location);
-        marker.setVisible(true);
-    });
-}
-
-function loadGoogleMapsScript(apiKey) {
-    const script = document.createElement('script');
-    script.src = `https://maps.googleapis.com/maps/api/js?key=${apiKey}&callback=initMap&libraries=places`;
-    script.async = true;
-    script.defer = true;
-    document.body.appendChild(script);
-}
-
-// Fetch the API key from the Django view and load the Google Maps API script
-fetch("{% url 'webapp:get_api_key' %}")
-    .then(response => response.json())
-    .then(data => {
-        loadGoogleMapsScript(data.google_api_key);
-    })
-    .catch(error => {
-        console.error('Error fetching API key:', error);
-    });
-</script>
 {% endblock %}
