Changed the path for default profile picture.

--- a/webapp/templates/webapp/user_profile.html
+++ b/webapp/templates/webapp/user_profile.html
@@ -18,7 +18,7 @@
                 {% if user.profile.profile_pic %}
                     <img src="{{ user.profile.profile_pic.url }}" alt="Profile Picture" class="profile-pic">
                 {% else %}
-                    <img src="{% static 'images/default_profile_pic.png' %}" alt="Default Profile Picture" class="profile-pic">
+                    <img src="{% static 'images/default-profile.png' %}" alt="Default Profile Picture" class="profile-pic">
                 {% endif %}
             </div>
             <div class="profile-details">
