Added the missing views.py/singup function call to the submit button for the Sign Up form. Closes #32

--- a/webapp/templates/webapp/welcome.html
+++ b/webapp/templates/webapp/welcome.html
@@ -38,7 +38,7 @@
             <h2>Sign Up by completing the form below</h2>
             {% csrf_token %}
             {{ form.as_p }}
-            <button type="submit">Sign up</button>
+            <button type="submit" name="signup">Sign up</button>
             <h3>*By clicking sign up, you are agreeing the terms of use.</h3>
         </form>
         </div>
